<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/dialog_form"
    android:paddingTop="10dp"
    android:paddingBottom="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:maxWidth="250dp"
        android:text="@string/choose_sort_type"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/sortTypeDialogImageClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:padding="8dp"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/sortTypeDialogToggleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:selectionRequired="true"
        app:singleSelection="true"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sortTypeDialogWinsCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/bottom_navigation_buttons_color"
            android:text="Wins" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sortTypeDialogGamesCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/bottom_navigation_buttons_color"
            android:text="Games" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <Button
        android:id="@+id/sortTypeDialogSave"
        style="@style/AppButton.Green"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/sortTypeDialogToggleGroup"
        tools:layout_editor_absoluteX="16dp" />
    <Button
        android:id="@+id/sortTypeDialogButtonClose"
        style="@style/AppButton.White"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="16dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortTypeDialogSave"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
